<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/pref_sortby_label"
        android:key="@string/pref_sortby_key"
        android:defaultValue="@string/pref_sortby_default"
        android:entryValues="@array/pref_sortby_value"
        android:entries="@array/pref_sortby_entry"/>

    <ListPreference
        android:title="@string/pref_sortseq_label"
        android:key="@string/pref_sortseq_key"
        android:defaultValue="@string/pref_sortseq_default"
        android:entryValues="@array/pref_sortseq_value"
        android:entries="@array/pref_sortseq_entry"/>

    <ListPreference
        android:title="@string/pref_filter_cate_label"
        android:key="@string/pref_filter_cate_key"
        android:defaultValue="@string/pref_filter_cate_default"
        android:entryValues="@array/pref_filter_cate_value"
        android:entries="@array/pref_filter_cate_entry"/>

    <ListPreference
        android:title="@string/pref_filter_subj_label"
        android:key="@string/pref_filter_subj_key"
        android:defaultValue="@string/pref_filter_subj_default"
        android:entryValues="@array/pref_filter_subj_value"
        android:entries="@array/pref_filter_subj_entry"/>

</PreferenceScreen>